terraform/modules/ec2/sg_bastion.tf
resource "aws_security_group" "sg_bastion" {
  name = "bastion-sg"
  vpc_id = var.vpc_id

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    #0.0.0.0/0 used only for learning/labs.
    #In production restriction to specific IPs or replaced with SSM.
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "devops-sg-bastion"
  }
}
